--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,16 @@ android {
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true  // 移除无用的resource文件
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-         }
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-gson.txt'
+            proguardFile 'proguard-gson.txt'
+
+        }
         debug{
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true  // 移除无用的resource文件
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-gson.txt'
+            proguardFile 'proguard-gson.txt'
 
         }
     }
